--- a/join/wwab.html
+++ b/join/wwab.html
@@ -22,7 +22,7 @@
               if(document.getElementById('year').value>14){// /^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$/
                 if(document.getElementById('em').value.search(/^(.+)@(.+)$/) != -1){
                   if(document.getElementById('robot').value=='I am not robot.'){
-                    window.location.href='https://j7855u7438.goho.co/xxay.html?email='+document.getElementById('em').value+'&ago='+document.getElementById('year').value+'&contry='+document.getElementById('one').value;
+                    window.location.href='https://j7855u7438.goho.co/join/xxay.html?email='+document.getElementById('em').value+'&ago='+document.getElementById('year').value+'&contry='+document.getElementById('one').value;
                   }else{
                   alert('Are you a robot? ');
                 }
