--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ input[name='6'] {
     </script>
     <div class="">
       <br><br><br>
-    <h1><br>徐明一 and 晁士育<br>后者将永远留在此！<br>
+    <h1>晁士育<br>
       <strong>Team of Onlycollapse</strong> <br>Happy 2024!</h1>
     <br>
     <div class="">
