--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ input[name='6'] {
     </script>
     <div class="">
       <br><br><br>
-    <h1>晁士育<br>
-      <strong>Team of Onlycollapse</strong> <br>Happy 2024!</h1>
+    <h1><strong>Team of Onlycollapse</strong> <br>Happy 2024!</h1>
     <br>
     <div class="">
     </div>
