--- a/join/oot.html
+++ b/join/oot.html
@@ -29,15 +29,17 @@
     }
     </style>
     <h3>You can </h3>
-    <h3><input type="button" name="next" value="Be copartner" onclick="xaa1()"><br><br>
-      <input type="button" name="next" value="Be staff member" onclick="xaa2()"><br><br>
+    <h3><br>
       <p>Tips:<br>
       1.Next, please answer carefully. Otherwise, we will not be responsible for the consequences!<br>
       2.Regardless of the outcome, the agreement you sign is permanent.<br>
       3.If you join the team, there is no salary for the time being because there is no source of funding at the moment.<br>
       4.The founder was just a 13-year-old teenager.<br>
 <br>
-      If you've read the tips above and still want to join, you can now go back to the top and select them.<br>
+      If you've read the tips above and still want to join, you can now select them.<br>
+        <input type="button" name="next" value="Be copartner" onclick="xaa1()"><br><br>
+      <input type="button" name="next" value="Be staff member" onclick="xaa2()"><br><br>
+      
       Otherwise, click the exit button below.<br></p>
       <input type="button" name="" value="EXIT" onclick="f()">
     </h3></font>
