--- a/help.html
+++ b/help.html
@@ -30,7 +30,10 @@
     </style>
     <div class="">
       <h1><strong>help</strong></h1><br>
-    <h3>1.How can I join you? <br>
+    <h3><br><br>You can email us at Onlycollapse@126.com<br>
+      <font color='red'>(Note: It's not onlycollapse@163.com. We are dealing with this "piracy" email.)
+             </font><br><br>
+      1.How can I join you? <br>
     <input type="button" name="next" value="THIS" onclick="c()"> <br> can join</h3>
     <br>
     <h3>2.What is Onlycollapse? <br>
