--- a/test/photos.html
+++ b/test/photos.html
@@ -22,10 +22,11 @@
 </head>
 <body>
 <div class="slideshow-container">
-  <img class="slide" src="image1.jpg" alt="Image 1">
-  <img class="slide" src="image2.jpg" alt="Image 2">
-  <img class="slide" src="image3.jpg" alt="Image 3">
-</div>
+  <p class="slide" alt="Image 1">1</p>
+  <p class="slide" alt="Image 2">12</p>
+  <p class="slide" alt="Image 3">123</p>
+  
+  </div>
 
 <script>
   let currentIndex = 0;
