--- a/test/photos.html
+++ b/test/photos.html
@@ -16,7 +16,7 @@
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
   dd = document.getElementById("text1");
   function moussMove(){
-    dd.value += scrolly;
+    dd.value += scrollY;
   }
   mouseMove();
 </script>
