--- a/test/photos.html
+++ b/test/photos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="">
-  <a class="slide" id="text1"></a>
+  <p class="slide" id="text1" value='test1--- '></p>
   
   </div>
 
