--- a/test/photos.html
+++ b/test/photos.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="">
-  <p class="slide" id="text1" value='test1--- '></p>
+  <p class="slide" id="text1" value='test1--- '>aaa</p>
   
   </div>
 
