--- a/test/photos.html
+++ b/test/photos.html
@@ -13,11 +13,8 @@
 <script>
   let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
-  dd = document.getElementById("text1");
-  function moussMove(){
-    dd.value += scrollY;
-  }
-  mouseMove();
+  alert(scrollX,",",scrollY);
+  
 </script>
 </body>
 </html>
