--- a/test/photos.html
+++ b/test/photos.html
@@ -7,7 +7,7 @@
 <body>
 <div class="">
   <br><br>
-  <input class="slide" id="text1" value='test1--- ' online = "cs()">
+  <input type ='button' class="slide" id="text1" value='test1--- ' onclick = "cs()">
   
   </div>
 
