--- a/test/photos.html
+++ b/test/photos.html
@@ -16,6 +16,8 @@
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
   alert(scrollX,",",scrollY);
   function cs(){
+    let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
+  let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
     alert(scrollX,",",scrollY);
 }
 </script>
