--- a/test/photos.html
+++ b/test/photos.html
@@ -14,11 +14,12 @@
 <script>
   let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
-  alert(scrollX,",",scrollY);
-  function cs(){
+  //alert(scrollX,",",scrollY);
+  windows.onload = function cs(){
     let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
     alert(scrollX,",",scrollY);
+    cs()
 }
 </script>
 </body>
