--- a/test/photos.html
+++ b/test/photos.html
@@ -17,7 +17,7 @@
     let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
     alert(scrollX,",",scrollY);
-    setTimeout(function(){
+    setTimeout(function aaa(){
       let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
   let scrollX = window.scrollX !== undefined ? window.scrollX : document.documentElement.scrollLeft;
   var x = 0;
@@ -27,6 +27,7 @@
     x = scrollX;
     y = scrollY;
   }
+  aaa();
     }, 3000)
 }
 function csd(){
