--- a/test/photos.html
+++ b/test/photos.html
@@ -32,7 +32,7 @@ function csd(){
     alert(scrollX,",",scrollY);
 }
 window.onload = function o(){
-    setTineout(cs(),500));
+    setTimeout(cs(),500));
   }
 </script>
 </body>
