--- a/test/vulns/index.html
+++ b/test/vulns/index.html
@@ -3,12 +3,7 @@
         <title>vulnTest 1</title>
     </haed>
     <body>
-        <script>
-           function b(){
-    if (1==1) {
-        alert(123456);
-    }
-}
+        <script src="vulns.js">
         </script>
         <input type="button" onclick="b()">
     </body>
