--- a/test/photos.html
+++ b/test/photos.html
@@ -19,7 +19,7 @@
   var x,y;
   x= 0;
   y =0;
-  if (x = scrollX || y = scrollY){
+  if (x == scrollX || y == scrollY){
     alert("no");
   }else{
     alert("yes");
