--- a/test/photos.html
+++ b/test/photos.html
@@ -24,7 +24,7 @@
   }else{
     alert("yes");
     }
-    cs();
+    setTimeout(cs(), 5000);
 }
 function csd(){
     let scrollY = window.scrollY !== undefined ? window.scrollY : document.documentElement.scrollTop;
