--- a/user.html
+++ b/user.html
@@ -56,7 +56,13 @@
       <h2><input type="text" name="u" value="" id="ur" placeholder="user..."></h2>
       <h2><input type="password" name="c" value="" id='code' placeholder="code..."></h2>
       <button type="button" name="button" onclick="okh()">OK</button>
-      <h3>If have invitation code,<a href="https://j7855u7438.goho.co/user1.html">this</a>Enter the invitation code</h3>
+      <h3>If have invitation code,<a href="https://onlycollapse.github.io/user1.html">this</a>Enter the invitation code.  
+        <br><br>
+        Have not user?<br>
+        <a href="https://onlycollapse.github.io/register">
+          Register one.
+        </a> 
+      </h3>
       <input type="button" name="" value="EXIT" onclick="f()">
     </div>
     </form> </font>
