--- a/register/index.html
+++ b/register/index.html
@@ -32,7 +32,7 @@ function f(){
     
       <h2><input type="text" name="u" value="" id="ur" placeholder="user..."></h2>
       <h2><input type="password" name="c" value="" id='code' placeholder="code..."></h2>
-      <button type="button" name="button" onclick="okh()">OK</button>
+      <button type="button" name="button" onclick="readu()">OK</button>
       <input type="button" name="" value="EXIT" onclick="f()">
     </div>
     </form> </font>
