--- a/register/index.html
+++ b/register/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>login</title>
+    <title>Register</title>
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
   </head>
   <style media="screen">
