--- a/join/thanks.html
+++ b/join/thanks.html
@@ -18,7 +18,7 @@
     </style>
     <script type="text/javascript">
       function a() {
-        window.location.href='join.html';
+        window.location.href='https://onlycollapse.girhub.io/';
       }
     </script><font color='white'>
     <div class="">
