--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ input[name='6'] {
 </style>
     <script type="text/javascript">
     function check(){
-      window.location.href="join/join.html";
+      window.location.href="join/";
     }
     function c(){
       window.location.href="help.html";
