--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ input[name='6'] {
     </script>
     <div class="">
       <br><br><br>
-    <h1><strong>晁士育<br>
+    <h1><strong>
       Team of Onlycollapse</strong> <br>Happy 2024!</h1>
     <br>
     <div class="">
