更新 testyourcpu.html

--- a/testyourcpu.html
+++ b/testyourcpu.html
@@ -32,6 +32,15 @@
             top: 30px;
             display: none;
         }
+        input{
+      background-color: #333333;
+      cursor: pointer;
+      border: none;
+      color: white;
+      width: 20%;
+      padding: 15px 100px;
+      display: inline-block;
+    }
     </style>
 </head>
 <body style="overflow-x:hidden;overflow-y:hidden">
