--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@ input[name='6'] {
       window.location.href="join/";
     }
     function c(){
-      window.location.href="help.html";
+      window.location.href="help";
     }
     function ck(){
-      window.location.href="par.html";
+      window.location.href="par";
     }
     function che(){
-      window.location.href="n.html";
+      window.location.href="n";
     }
     function chk(){
-      window.location.href="user.html";
+      window.location.href="user";
     }
     function vo(){
-      window.location.href="vo.html";
+      window.location.href="vo";
     }
     </script>
     <div class="">
