--- a/dnh.html
+++ b/dnh.html
@@ -8,7 +8,7 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
     function a(){
-      window.location.href='help.html';
+      window.location.href='help';
     }
     function b(){
       if(document.getElementById('ddd').value!=''){
