--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ input[name='6'] {
     <h2><input type="button" name="1" value="Join us" onclick="check()"> </h2>
 
     <h2><input type="button" name="2" value="help" onclick="c()"></h2>
-    <h2><input type="button" name="3" value="Participate in project" onclick="ck()"></h2>
+    <h2><input type="button" name="3" value="interesting things" onclick="ck()"></h2>
     <h2><input type="button" name="4" value="Team News" onclick="che()"></h2>
     <h2><input type="button" name="5" value="login" onclick="chk()"></h2>
     <h2><input type="button" name="6" value="Virus Collection" onclick="vo()" class='button1'></h2>    </div>
