--- a/par.html
+++ b/par.html
@@ -20,10 +20,15 @@
     input{
       width: 20%;
     }
+    button{
+      
+    }
     </style>
     <div class=""><font color='white'>
       <h1>Participate in project</h1><br>
-      <h2> <a href="di.html">Dimensional-Infinite</a> </h2>
+      <h2><button onlick="mogu()">
+        Dimension
+      </button> </h2>
       <h2><input type="button" name="" value="EXIT" onclick="a()"></h2>
     </div></font>
   </body>
