--- a/par.html
+++ b/par.html
@@ -10,6 +10,9 @@
       function a(){
         window.location.href='https://onlycollapse.github.io/';
       }
+      function mogu(){
+        window.location.href="testyourcpu"
+      }
     </script>
     <style>
     input[name=next] {
