--- a/par.html
+++ b/par.html
@@ -24,7 +24,16 @@
       width: 20%;
     }
     button{
-      
+       position: fixed;
+  top: 0;
+  left: 10%;
+  transform: translateX(-61%);
+  padding: 5px 5px;
+  background-color: #ffffff;
+  color: #000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
     }
     </style>
     <div class=""><font color='white'>
