--- a/par.html
+++ b/par.html
@@ -38,9 +38,9 @@
     </style>
     <div class=""><font color='white'>
       <h1>Participate in project</h1><br>
-      <h2><button onlick="mogu()">
-        Dimension
-      </button> </h2>
+      <h2><input onlick="mogu()" value="Dimension">
+        
+      </h2>
       <h2><input type="button" name="" value="EXIT" onclick="a()"></h2>
     </div></font>
   </body>
