--- a/par.html
+++ b/par.html
@@ -38,7 +38,7 @@
     </style>
     <div class=""><font color='white'>
       <h1>Participate in project</h1><br>
-      <h2><input onlick="mogu()" value="Dimension">
+      <h2><input onclick="mogu()" value="Dimension">
         
       </h2>
       <h2><input type="button" name="" value="EXIT" onclick="a()"></h2>
