--- a/par.html
+++ b/par.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Onlycollapse Participate in the project</title>
+    <title>Onlycollapse interesting things </title>
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
   </head>
   <body style="background-color: #000000">
@@ -24,20 +24,12 @@
       width: 20%;
     }
     button{
-       position: fixed;
-  top: 0;
-  left: 100%;
-  transform: translateX(-61%);
-  padding: 5px 5px;
-  background-color: #ffffff;
-  color: #000;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+       
     }
     </style>
-    <div class=""><font color='white'>
-      <h1>Participate in project</h1><br>
+    <div class="" align="center">
+      <font color='white'>
+      <h1>interesting things</h1><br>
       <h2><input onclick="mogu()" type="button" value="Dimension">
         
       </h2>
