--- a/par.html
+++ b/par.html
@@ -15,17 +15,13 @@
       }
     </script>
     <style>
-    input[name=next] {
+    input[name=e] {
     background-color: #4CAF50;
-    color: white;
-    width: 20%;
     }
     input{
       width: 20%;
     }
-    button{
-       
-    }
+
     </style>
     <div class="" align="center">
       <font color='white'>
