--- a/par.html
+++ b/par.html
@@ -20,6 +20,12 @@
     }
     input{
       width: 20%;
+      background-color: #333333;
+      cursor: pointer;
+      border: none;
+      color: white;
+      padding: 15px 100px;
+      display: inline-block;
     }
 
     </style>
