--- a/join/wwab.html
+++ b/join/wwab.html
@@ -54,6 +54,9 @@
       padding: 15px 100px;
       display: inline-block;
     }
+    input[name=e] {
+    background-color: #4CAF50;
+    }
     </style>
     <!-- WARNING: 警告！; -->
     <div class="">
@@ -67,7 +70,7 @@
         <h3><font color='red'>*</font>Enter English text "I am not robot." <br>
         <input type="text" name="" value="" id='robot'> </h3><br><br>
         <h3><input type="button" name="next" value="next" onclick="xaa()"> </h3>
-        <h3><input type="button" name="" value="exit" onclick="a()"> </h3>
+        <h3><input type="button" name="e" value="exit" onclick="a()"> </h3>
       </div>
   </div></div>
 </font></body>
