--- a/par.html
+++ b/par.html
@@ -29,7 +29,7 @@
     }
 
     </style>
-    <div class="" align="center">
+    <div class="">
       <font color='white'>
       <h1>interesting things</h1><br>
       <h2><input onclick="mogu()" type="button" value="Dimension">
