--- a/par.html
+++ b/par.html
@@ -5,7 +5,7 @@
     <title>Onlycollapse interesting things </title>
     <link rel="icon" type="image/png" sizes="96x96" href="file/Logo.ico">
   </head>
-  <body style="background-color: #000000">
+  <body align="center" style="background-color: #000000">
     <script type="text/javascript">
       function a(){
         window.location.href='https://onlycollapse.github.io/';
