--- a/join/oot.html
+++ b/join/oot.html
@@ -8,10 +8,10 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function xaa1(){
-        window.location.href='wab.html';
+        window.location.href='wab';
       }
       function xaa2(){
-        window.location.href='wwab.html';
+        window.location.href='wwab';
       }
       function f(){
         window.location.href='https://onlycollapse.github.io/';
