--- a/join/index.html
+++ b/join/index.html
@@ -12,7 +12,7 @@
         window.location.href='https://onlycollapse.github.io/';
       }
       function wab() {
-        window.location.href='oot';
+        window.location.href='oot.html';
       }
     </script>
     <style>
