--- a/testyourcpu.html
+++ b/testyourcpu.html
@@ -2,7 +2,7 @@ b<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no">
-    <title>volumeshader_bm</title>
+    <title>Yeah</title>
     <style>
         body {
             background: #131115;
