--- a/join/wwab.html
+++ b/join/wwab.html
@@ -62,6 +62,8 @@
     <div class="">
     <div class=""><font color='white'>
       <div class="" align='center'>
+         <fieldset>
+        <legend></legend>
         <h3><font color='red'>*</font>Your country <br> <input type="text" name="" value="" id="one"></h3>
         <h3><font color='red'>*</font>Your region <br> <input type="text" name="" value="" id="two"></h3>
         <h3><font color='red'>*</font>Your postal code <br> <input type="text" name="" value="" id="th"></h3>
@@ -71,6 +73,7 @@
         <input type="text" name="" value="" id='robot'> </h3><br><br>
         <h3><input type="button" name="next" value="next" onclick="xaa()"> </h3>
         <h3><input type="button" name="e" value="exit" onclick="a()"> </h3>
+        </fieldset>
       </div>
   </div></div>
 </font></body>
