--- a/n.html
+++ b/n.html
@@ -28,10 +28,12 @@
     <div class="">
       <h1 align='center'><strong>Team News</strong></h1><br><br><br>
       <h3>News is in order from new to oldest, from top to bottom</h3>
-      <hr> <br><h4>2024.3.7</h4>
+      <hr> <br>
+        <details name="1">
+      <summary><h4>2024.3.7 The team was officially established!</h4></summary>
       <img src="file/Logo.ico" alt="" height="100" width="100"><br>
       <p>The team was officially established!</p>
-<br>
+<br></details>
       <h2 align='center'><input type="button" name="" value="EXIT" onclick="a()"></h2>
     </div></font>
   </body>
