--- a/n.html
+++ b/n.html
@@ -30,7 +30,7 @@
       <h3>News is in order from new to oldest, from top to bottom</h3>
       <hr> <br>
         <details name="1">
-      <summary><h4>2024.3.7 The team was officially established!</h4></summary>
+      <summary>2024.3.7 The team was officially established!</summary>
       <img src="file/Logo.ico" alt="" height="100" width="100"><br>
       <p>The team was officially established!</p>
 <br></details>
