--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ input[name='6'] {
     <div class="">
       <br><br><br>
     <h1><strong>
-<div class="notranslate">Onlycollapse</div>Team</strong> <br>Happy 2024!</h1>
+<div class="notranslate">Onlycollapse</div></strong> <br>Happy 2024!</h1>
     <br>
     <div class="">
     </div>
