--- a/join/wwab.html
+++ b/join/wwab.html
@@ -68,7 +68,12 @@
         <h3><font color='red'>*</font>Your region <br> <input type="text" name="" value="" id="two"></h3>
         <h3><font color='red'>*</font>Your postal code <br> <input type="text" name="" value="" id="th"></h3>
         <h3><font color='red'>*</font>Your age<br> <input type="text" name="" value="" id="year"></h3>
-        <h3><font color='red'>*</font>Your Email<br><input type="text" name="" value="" id='em'></h3><br>
+        <h3><font color='red'>*</font>Your Email<br><input type="text" name="" value="" id='em'></h3>
+        <h3>
+          Why do you want to join?<br>
+            <textarea rows="10" cola="20" id="whyy" value=""></textarea>
+        </h3>
+        <br>
         <h3><font color='red'>*</font>Enter English text "I am not robot." <br>
         <input type="text" name="" value="" id='robot'> </h3><br><br>
         <h3><input type="button" name="next" value="next" onclick="xaa()"> </h3>
