--- a/join/wwab.html
+++ b/join/wwab.html
@@ -59,8 +59,8 @@
       cursor: pointer;
       border: none;
       color: white;
-      width: 20%;
-      padding: 15px 100px;
+      //width: 20%;
+      //padding: 15px 100px;
       display: inline-block;
     }
     input[name=e] {
