--- a/join/wwab.html
+++ b/join/wwab.html
@@ -59,8 +59,7 @@
       cursor: pointer;
       border: none;
       color: white;
-      /*width: 20%;
-      padding: 15px 100px;*/
+      width: 40%;
       display: inline-block;
     }
     input[name=e] {
