--- a/join/wab.html
+++ b/join/wab.html
@@ -73,7 +73,14 @@
         
         <fieldset>
         <legend></legend>
-        <h3><font color='red'>*</font>Your country <br> <input type="text" name="" value="" id="one"></h3>
+        <h3><font color='red'>*</font>Your country <br>
+          <select id="one">
+            <option>aaa</option>
+            <option>sssaa</option>
+            <option>aaadddddd</option>
+          </select>
+          <!-- <input type="text" name="" value="" id="one">-->
+        </h3>
         <h3><font color='red'>*</font>Your region <br> <input type="text" name="" value="" id="two"></h3>
         <h3><font color='red'>*</font>Your postal code <br> <input type="text" name="" value="" id="th"></h3>
         <h3><font color='red'>*</font>Your age<br> <input type="text" name="" value="" id="year"></h3>
