--- a/join/wab.html
+++ b/join/wab.html
@@ -62,6 +62,22 @@
       width: 40%;
       display: inline-block;
     }
+    textarea{
+      background-color: #333333;
+      cursor: pointer;
+      border: none;
+      color: white;
+      width: 40%;
+      display: inline-block;
+    }
+    select{
+      background-color: #333333;
+      cursor: pointer;
+      border: none;
+      color: white;
+      width: 40%;
+      display: inline-block;
+    }
     input[name=e] {
     background-color: #4CAF50;
     }
@@ -74,7 +90,7 @@
         <fieldset>
         <legend></legend>
         <h3><font color='red'>*</font>Your country <br>
-<select>
+<select id="one">
     <option>Afghanistan</option>
     <option>Albania</option>
     <option>Algeria</option>
