--- a/join/wwab.html
+++ b/join/wwab.html
@@ -60,7 +60,7 @@
       border: none;
       color: white;
       width: 20%;
-      padding: 15px 100px;
+      height:30px;
       display: inline-block;
     }
     textarea{
