--- a/join/wab.html
+++ b/join/wab.html
@@ -62,20 +62,13 @@
       width: 40%;
       display: inline-block;
     }
-    textarea{
-      background-color: #333333;
-      cursor: pointer;
-      border: none;
-      color: white;
-      width: 40%;
-      display: inline-block;
-    }
     select{
       background-color: #333333;
       cursor: pointer;
       border: none;
       color: white;
-      width: 40%;
+      width: 200%;
+      height:30px;
       display: inline-block;
     }
     input[name=e] {
