--- a/join/wab.html
+++ b/join/wab.html
@@ -67,7 +67,7 @@
       cursor: pointer;
       border: none;
       color: white;
-      width: 30%;
+      width: 200px;
       height:30px;
       display: inline-block;
     }
