--- a/join/wwab.html
+++ b/join/wwab.html
@@ -59,8 +59,8 @@
       cursor: pointer;
       border: none;
       color: white;
-      width: 20%;
-      height:30px;
+      width: 390px;
+      height:40px;
       display: inline-block;
     }
     textarea{
