--- a/test/cet.html
+++ b/test/cet.html
@@ -3,6 +3,17 @@
         <title>canvas test</title>
     </head>
     <body>
+        <script>
+        var c = document.getElementById("c");
+        var ct = getContext("2d");
+        ct.fillStyle = "#ff0000"
+        ct.fillRect(100,100,100,100);
         
+        </script>
+        
+        <details name="1">
+      <summary>T0-01</summary>
+      <canvas id="c"></canvas>
+<br></details>
     </body>
 </html>
