--- a/test/cet.html
+++ b/test/cet.html
@@ -5,7 +5,7 @@
     <body>
         <script>
         var c = document.getElementById("c");
-        var ct = getContext("2d");
+        var ct = c.getContext("2d");
         ct.fillStyle = "#ff0000"
         ct.fillRect(100,100,100,100);
         
