--- a/test/cet.html
+++ b/test/cet.html
@@ -6,7 +6,7 @@
         <script>
         var c = document.getElementById("c");
         var ct = c.getContext("2d");
-        ct.fillStyle = "#ff0000"
+        ct.fillStyle = "#ff0000";
         ct.fillRect(100,100,100,100);
         
         </script>
