--- a/test/cet.html
+++ b/test/cet.html
@@ -1,12 +1,16 @@
 <html>
     <head>
-        <title>canvas test</title>
+        <title>draw test</title>
     </head>
     <body>
         
         <details name="1">
       <summary>T0-01</summary>
       <canvas id="c"></canvas>
+<br></details>
+<details name="1">
+      <summary>T0-02</summary>
+      <div class="demo"></div>
 <br></details>
 
 <script>
@@ -16,6 +20,18 @@
         ct.fillRect(100,100,100,100);
         
         </script>
+
+<style>
+.demo {
+width: 150px;
+height: 150px;
+border-radius: 50%；
+border: 2px solid #000；
+background: conic-gradient (#f00,#ff0,#0f0,#0ff,#00f) ;
+#f40，
+#f40
+120deg,
+
 
     </body>
 </html>
