--- a/test/cet.html
+++ b/test/cet.html
@@ -27,11 +27,8 @@ width: 150px;
 height: 150px;
 border-radius: 50%；
 border: 2px solid #000；
-background: conic-gradient (#f00,#ff0,#0f0,#0ff,#00f) ;
-#f40，
-#f40
-120deg,
-
+background: conic-gradient (#f00,#ff0,#0f0,#0ff,#00f);
+}</style>
 
     </body>
 </html>
