--- a/join/wab.html
+++ b/join/wab.html
@@ -74,6 +74,11 @@
     input[name=e] {
     background-color: #4CAF50;
     }
+    option[name=a] {
+      position: sticky;
+      top: 0;
+    }
+    
     </style>
     <!-- WARNING: 警告！; -->
     <div class="">
@@ -84,6 +89,7 @@
         <legend></legend>
         <h3><font color='red'>*</font>Your country <br>
 <select id="one">
+    <option disabled="disabled" name="a">A</option>
     <option>Afghanistan</option>
     <option>Albania</option>
     <option>Algeria</option>
@@ -95,6 +101,9 @@
     <option>Australia</option>
     <option>Austria</option>
     <option>Azerbaijan</option>
+    <option disabled="disabled" name="a">
+      B
+    </option>
     <option>Bahamas</option>
     <option>Bahrain</option>
     <option>Bangladesh</option>
@@ -112,6 +121,9 @@
     <option>Bulgaria</option>
     <option>Burkina Faso</option>
     <option>Burundi</option>
+    <option disabled="disabled" name="a">
+      C
+    </option>
     <option>Cabo Verde</option>
     <option>Cambodia</option>
     <option>Cameroon</option>
@@ -128,10 +140,16 @@
     <option>Cuba</option>
     <option>Cyprus</option>
     <option>Czech Republic</option>
+    <option disabled="disabled" name="a">
+      D
+    </option>
     <option>Denmark</option>
     <option>Djibouti</option>
     <option>Dominica</option>
     <option>Dominican Republic</option>
+    <option disabled="disabled" name="a">
+      E
+    </option>
     <option>East Timor</option>
     <option>Ecuador</option>
     <option>Egypt</option>
@@ -141,9 +159,15 @@
     <option>Estonia</option>
     <option>Eswatini</option>
     <option>Ethiopia</option>
+    <option disabled="disabled" name="">
+      F
+    </option>
     <option>Fiji</option>
     <option>Finland</option>
     <option>France</option>
+    <option disabled="disabled" name="a">
+      G
+    </option>
     <option>Gabon</option>
     <option>Gambia</option>
     <option>Georgia</option>
@@ -155,9 +179,15 @@
     <option>Guinea</option>
     <option>Guinea-Bissau</option>
     <option>Guyana</option>
+    <option disabled="disabled" name="">
+      H
+    </option>
     <option>Haiti</option>
     <option>Honduras</option>
     <option>Hungary</option>
+    <option disabled="disabled" name="a">
+      I
+    </option>
     <option>Iceland</option>
     <option>India</option>
     <option>Indonesia</option>
@@ -166,15 +196,24 @@
     <option>Ireland</option>
     <option>Israel</option>
     <option>Italy</option>
+    <option disabled="disabled" name="a">
+      J
+    </option>
     <option>Jamaica</option>
     <option>Japan</option>
     <option>Jordan</option>
+    <option disabled="disabled" name="a">
+      K
+    </option>
     <option>Kazakhstan</option>
     <option>Kenya</option>
     <option>Kiribati</option>
     <option>Kosovo</option>
     <option>Kuwait</option>
     <option>Kyrgyzstan</option>
+    <option disabled="disabled" name="a">
+      L
+    </option>
     <option>Laos</option>
     <option>Latvia</option>
     <option>Lebanon</option>
@@ -184,6 +223,9 @@
     <option>Liechtenstein</option>
     <option>Lithuania</option>
     <option>Luxembourg</option>
+    <option disabled="disabled" name="a">
+      M
+    </option>
     <option>Madagascar</option>
     <option>Malawi</option>
     <option>Malaysia</option>
@@ -202,6 +244,9 @@
     <option>Morocco</option>
     <option>Mozambique</option>
     <option>Myanmar</option>
+    <option disabled="disabled" name="a">
+      N
+    </option>
     <option>Namibia</option>
     <option>Nauru</option>
     <option>Nepal</option>
@@ -212,7 +257,13 @@
     <option>Nigeria</option>
     <option>North Macedonia</option>
     <option>Norway</option>
+    <option disabled="disabled" name="">
+      O
+    </option>
     <option>Oman</option>
+    <option disabled="disabled" name="a">
+      P
+    </option>
     <option>Pakistan</option>
     <option>Palau</option>
     <option>Panama</option>
@@ -222,10 +273,19 @@
     <option>Philippines</option>
     <option>Poland</option>
     <option>Portugal</option>
+    <option disabled="disabled" name="a">
+      Q
+    </option>
     <option>Qatar</option>
+    <option disabled="disabled" name="a">
+      R
+    </option>
     <option>Romania</option>
     <option>Russia</option>
     <option>Rwanda</option>
+    <option disabled="disabled" name="a">
+      S
+    </option>
     <option>Saint Kitts and Nevis</option>
     <option>Saint Lucia</option>
     <option>Saint Vincent and the Grenadines</option>
@@ -252,6 +312,9 @@
     <option>Sweden</option>
     <option>Switzerland</option>
     <option>Syria</option>
+    <option disabled="disabled" name="a">
+      T
+    </option>
     <option>Taiwan</option>
     <option>Tajikistan</option>
     <option>Tanzania</option>
@@ -263,6 +326,9 @@
     <option>Turkey</option>
     <option>Turkmenistan</option>
     <option>Tuvalu</option>
+    <option disabled="disabled" name="a">
+      U
+    </option>
     <option>Uganda</option>
     <option>Ukraine</option>
     <option>United Arab Emirates</option>
@@ -270,11 +336,20 @@
     <option>United States</option>
     <option>Uruguay</option>
     <option>Uzbekistan</option>
+    <option disabled="disabled" name="a">
+      V
+    </option>
     <option>Vanuatu</option>
     <option>Vatican City</option>
     <option>Venezuela</option>
     <option>Vietnam</option>
+    <option disabled="disabled" name="a">
+      Y
+    </option>
     <option>Yemen</option>
+    <option disabled="disabled" name="a">
+      Z
+    </option>
     <option>Zambia</option>
     <option>Zimbabwe</option>
 </select>
