--- a/join/wab.html
+++ b/join/wab.html
@@ -89,6 +89,7 @@
         <legend></legend>
         <h3><font color='red'>*</font>Your country <br>
 <select id="one">
+  <div>
     <option disabled="disabled" name="a">A</option>
     <option>Afghanistan</option>
     <option>Albania</option>
@@ -101,6 +102,7 @@
     <option>Australia</option>
     <option>Austria</option>
     <option>Azerbaijan</option>
+    </div><div>
     <option disabled="disabled" name="a">
       B
     </option>
