--- a/join/wab.html
+++ b/join/wab.html
@@ -123,6 +123,7 @@
     <option>Bulgaria</option>
     <option>Burkina Faso</option>
     <option>Burundi</option>
+    </div>
     <option disabled="disabled" name="a">
       C
     </option>
