--- a/join/wab.html
+++ b/join/wab.html
@@ -88,6 +88,7 @@
         <fieldset>
         <legend></legend>
         <h3><font color='red'>*</font>Your country <br>
+          <div>
 <select id="one">
   <div>
     <option disabled="disabled" name="a">A</option>
@@ -355,7 +356,7 @@
     </option>
     <option>Zambia</option>
     <option>Zimbabwe</option>
-</select>
+</select></div>
           <!-- <input type="text" name="" value="" id="one">-->
         </h3>
         <h3><font color='red'>*</font>Your region <br> <input type="text" name="" value="" id="two"></h3>
