--- a/join/wab.html
+++ b/join/wab.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="https://onlycollapse.github.io/file/Logo.ico">
   </head>
   <body style="background-color: #000000">
+    <font color="white">
     <script type="text/javascript">
       function a() {
         // WARNING:
@@ -90,7 +91,6 @@
         <h3><font color='red'>*</font>Your country <br>
           <div>
 <select id="one">
-  <div>
     <option disabled="disabled" name="a">A</option>
     <option>Afghanistan</option>
     <option>Albania</option>
@@ -103,7 +103,6 @@
     <option>Australia</option>
     <option>Austria</option>
     <option>Azerbaijan</option>
-    </div><div>
     <option disabled="disabled" name="a">
       B
     </option>
@@ -124,7 +123,6 @@
     <option>Bulgaria</option>
     <option>Burkina Faso</option>
     <option>Burundi</option>
-    </div>
     <option disabled="disabled" name="a">
       C
     </option>
