--- a/join/wwab.html
+++ b/join/wwab.html
@@ -83,6 +83,7 @@
         <legend></legend>
         <h3><font color='red'>*</font>Your country <br> 
           <select id="one">
+    <option disabled="disabled" name="a">A</option>
     <option>Afghanistan</option>
     <option>Albania</option>
     <option>Algeria</option>
@@ -94,6 +95,9 @@
     <option>Australia</option>
     <option>Austria</option>
     <option>Azerbaijan</option>
+    <option disabled="disabled" name="a">
+      B
+    </option>
     <option>Bahamas</option>
     <option>Bahrain</option>
     <option>Bangladesh</option>
@@ -111,6 +115,9 @@
     <option>Bulgaria</option>
     <option>Burkina Faso</option>
     <option>Burundi</option>
+    <option disabled="disabled" name="a">
+      C
+    </option>
     <option>Cabo Verde</option>
     <option>Cambodia</option>
     <option>Cameroon</option>
@@ -127,10 +134,16 @@
     <option>Cuba</option>
     <option>Cyprus</option>
     <option>Czech Republic</option>
+    <option disabled="disabled" name="a">
+      D
+    </option>
     <option>Denmark</option>
     <option>Djibouti</option>
     <option>Dominica</option>
     <option>Dominican Republic</option>
+    <option disabled="disabled" name="a">
+      E
+    </option>
     <option>East Timor</option>
     <option>Ecuador</option>
     <option>Egypt</option>
@@ -140,9 +153,15 @@
     <option>Estonia</option>
     <option>Eswatini</option>
     <option>Ethiopia</option>
+    <option disabled="disabled" name="">
+      F
+    </option>
     <option>Fiji</option>
     <option>Finland</option>
     <option>France</option>
+    <option disabled="disabled" name="a">
+      G
+    </option>
     <option>Gabon</option>
     <option>Gambia</option>
     <option>Georgia</option>
@@ -154,9 +173,15 @@
     <option>Guinea</option>
     <option>Guinea-Bissau</option>
     <option>Guyana</option>
+    <option disabled="disabled" name="">
+      H
+    </option>
     <option>Haiti</option>
     <option>Honduras</option>
     <option>Hungary</option>
+    <option disabled="disabled" name="a">
+      I
+    </option>
     <option>Iceland</option>
     <option>India</option>
     <option>Indonesia</option>
@@ -165,15 +190,24 @@
     <option>Ireland</option>
     <option>Israel</option>
     <option>Italy</option>
+    <option disabled="disabled" name="a">
+      J
+    </option>
     <option>Jamaica</option>
     <option>Japan</option>
     <option>Jordan</option>
+    <option disabled="disabled" name="a">
+      K
+    </option>
     <option>Kazakhstan</option>
     <option>Kenya</option>
     <option>Kiribati</option>
     <option>Kosovo</option>
     <option>Kuwait</option>
     <option>Kyrgyzstan</option>
+    <option disabled="disabled" name="a">
+      L
+    </option>
     <option>Laos</option>
     <option>Latvia</option>
     <option>Lebanon</option>
@@ -183,6 +217,9 @@
     <option>Liechtenstein</option>
     <option>Lithuania</option>
     <option>Luxembourg</option>
+    <option disabled="disabled" name="a">
+      M
+    </option>
     <option>Madagascar</option>
     <option>Malawi</option>
     <option>Malaysia</option>
@@ -201,6 +238,9 @@
     <option>Morocco</option>
     <option>Mozambique</option>
     <option>Myanmar</option>
+    <option disabled="disabled" name="a">
+      N
+    </option>
     <option>Namibia</option>
     <option>Nauru</option>
     <option>Nepal</option>
@@ -211,7 +251,13 @@
     <option>Nigeria</option>
     <option>North Macedonia</option>
     <option>Norway</option>
+    <option disabled="disabled" name="">
+      O
+    </option>
     <option>Oman</option>
+    <option disabled="disabled" name="a">
+      P
+    </option>
     <option>Pakistan</option>
     <option>Palau</option>
     <option>Panama</option>
@@ -221,10 +267,19 @@
     <option>Philippines</option>
     <option>Poland</option>
     <option>Portugal</option>
+    <option disabled="disabled" name="a">
+      Q
+    </option>
     <option>Qatar</option>
+    <option disabled="disabled" name="a">
+      R
+    </option>
     <option>Romania</option>
     <option>Russia</option>
     <option>Rwanda</option>
+    <option disabled="disabled" name="a">
+      S
+    </option>
     <option>Saint Kitts and Nevis</option>
     <option>Saint Lucia</option>
     <option>Saint Vincent and the Grenadines</option>
@@ -251,6 +306,9 @@
     <option>Sweden</option>
     <option>Switzerland</option>
     <option>Syria</option>
+    <option disabled="disabled" name="a">
+      T
+    </option>
     <option>Taiwan</option>
     <option>Tajikistan</option>
     <option>Tanzania</option>
@@ -262,6 +320,9 @@
     <option>Turkey</option>
     <option>Turkmenistan</option>
     <option>Tuvalu</option>
+    <option disabled="disabled" name="a">
+      U
+    </option>
     <option>Uganda</option>
     <option>Ukraine</option>
     <option>United Arab Emirates</option>
@@ -269,11 +330,20 @@
     <option>United States</option>
     <option>Uruguay</option>
     <option>Uzbekistan</option>
+    <option disabled="disabled" name="a">
+      V
+    </option>
     <option>Vanuatu</option>
     <option>Vatican City</option>
     <option>Venezuela</option>
     <option>Vietnam</option>
+    <option disabled="disabled" name="a">
+      Y
+    </option>
     <option>Yemen</option>
+    <option disabled="disabled" name="a">
+      Z
+    </option>
     <option>Zambia</option>
     <option>Zimbabwe</option>
 </select>
