--- a/test/cet.html
+++ b/test/cet.html
@@ -29,7 +29,11 @@ height: 150px;
 border-radius: 50%；
 border: 2px solid #000；
 background: conic-gradient (#f00,#ff0,#0f0,#0ff,#00f);
-}</style>
+}
+canvas {
+    z-index:-2;
+}
+</style>
 
     </body>
 </html>
